r15 ====================================================================
- исправления в методе SequenceGenGradGen.init_attrs()
- исправления в демонстрационной программе example.py
- исправления в README.md
* изменён класс GradPosition:
  * "константа" DEFAULT_TICK_INTERVAL перенесена из класса GradSender
    в класс GradPosition
  * изменён метод set_length() - кроме числовых значений он теперь
    может получать строку вида ЧЧ:ММ:СС, см. описание метода set_length()
  * метод compute_length() убран, его функциональность перенесена
    в метод set_length()
  - убран метод set_length_from_time() по тем же причинам
  + метод set_direction() и соотв. параметр конструктора может принимать
    кроме положительного/отрицательного числа также булевское значение,
    в этом случае значению False соответствует direction = -1
- исправлена демонстрационная программа example.py

r14 ====================================================================
* изменено поведение функции unwrap_lol():
  + на входе принимает любые типы, списки и кортежи - разворачивает,
    прочие - помещает в возвращаемый список;
  + добавлена опциональная проверка типов: "прочие" проверяются на
    соответствие указанному типу (см. описание функции), в случае
    несоответствия генерируется исключение
+ конструкторам классов, порождённых от GenGradGen, теперь можно передавать
  параметр subgen со списком экземпляров потомков GradGen (как ранее
  методу add_subgen()); упомянутый метод также может использоваться
* функция fparam_to_tuple() перемещена в класс GradGen в качестве
  статического метода и переименована в param_get_tof()
+ в класс GradGen добавлен статический метод param_get_grad(), см. описание
* для совместимости с аццким разнообразием шрифтов в природе функция
  channels_to_str() вместо псевдографики теперь использует символы
  из диапазона ASCII
+ добавлен класс EnvelopeGenGradGen, возвращающий значения от генератора,
  амплитудно модулированные значениями другого генератора