@@ -1,3 +1,13 @@
+r16 ====================================================================
+* метод GradGen.param_get_grad() переименован в kwargs_get(), т.к.
+  1. предназначен для получения параметров любого типа;
+  2. предназначен для обработки kwargs из метода init_attrs(), а не
+     для получения параметров экземпляра класса, как могло бы показаться
+     по старому названию метода
+* метод GradGen.param_get_tof() переименован в kwargs_get_tof() по тем
+  же соображениям
++ добавлен класс GenRecorderGen (см. описание)
+
 r15 ====================================================================
 - исправления в методе SequenceGenGradGen.init_attrs()
 - исправления в демонстрационной программе example.py
